Fixed alignment issues in join-gdc page

--- a/website/src/assets/scss/App.css
+++ b/website/src/assets/scss/App.css
@@ -368,6 +368,13 @@
   }
 }
 
+.half-width-box {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  float: left;
+}
+
 html,
 body {
   margin: 0px;
